welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:4: error: not found: value temps
  } else if (temp>=60 && temps<=100 && isSummer==true) {
                         ^