welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.code
def squirrelPlay(temp:Int, isSummer:Boolean):Boolean = {
  if (temp>=60 && temp<=90 && isSummer==false) {
    return true
  } else if (temp>=60 && temps<=100 && isSummer==true) {
    return true
  } else return false
}